<?xml version="1.0" encoding="utf-8"?>
<resources>
	

    <string name="app_name">SChat</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="create_new_chat">Create new chat</string>
    <string name="btn_clear_all_logins">Clear all logins</string>
    <string name="add_channel">add channel</string>
    <string name="set_code">Set by code</string>
    <string name="set_name">Set by name</string>
    <string name="enter_name">Enter channel name here</string>
    <string name="enter_code">Or enter channel code here</string>
    <string name="set_chat">Set chat</string>
    <string name="chat_name">Chat name</string>
    <string name="login">Login to chats</string>
    <string name="okay">Okay</string>
    <string name="stop_start">Stop all chats</string>
	<string name="number_list">Чат</string>
	<string name="empty">Нет данных</string>
	<string name="dialog_1">Dialog 1</string>
	<string name="dialog_2">Dialog 2</string>
	<string name="message_text">Text of your message</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="maybe">Maybe</string>
	<string name="Login_complete">Login complete</string>
	<string name="Login_failed">Login failed</string>
	<string name="Login_saved">Login saved</string>
	<string name="Login_delete">Login delete</string>
	<string name="count">count</string>
	<string name="main_straems_sc2tv">Show main streams</string>
	<string name="hint_type_personal_Name">Prefer name</string>
	<string name="hint_type_sc2tv_code">sc2tv code</string>
	<string name="hint_type_twitch_add">Type twitch channel name</string>
	<string name="login_to_sc2tv">Login to sc2tv</string>
	<string name="login_to_twitch">Login to twitch</string>
	<string name="notify_channels_not_set">Set some channels for send message in menu or send private message</string>

	<string name="btn_login_exit">Back to chat</string>
	<string name="default_message">There are no posts yet</string>
	<string name="dlg_stop">Stop</string>
	<string name="dlg_stop_service_question">You really want stop download chats content?</string>
	<string name="help_version">Version of the App:</string>
	<string name="help_info_about_login">      For posting messages into chats you need to go to menu and press “Login”. Then login. After  you password will be saved,  you can start messaging.</string>
	<string name="text_help_prefs">There  are many useful thing for messages display customization in preferences!</string>
	<string name='text_help_links'>Any questions and  suggestions you may post in <a href="https://play.google.com/store/apps/details?id=ivied.p001astreamchat">GooglePlay</a> or <a href="http://forum.sc2tv.ru/threads/45763-%D0%A7%D0%B0%D1%82-%D0%B4%D0%BB%D1%8F-%D0%B7%D1%80%D0%B8%D1%82%D0%B5%D0%BB%D0%B5%D0%B9">Sc2tv</a></string>
	<string name="toast_sc2tv_much_smiles">3 or more smiles not allow in sc2tv</string>
    <string name="hint_login_pass">password</string>
    <string name="hint_login_nickname">nickname</string>
    <string name="btn_login_sc2tv">Press to login on Sc2tv</string>
    <string name="btn_login_twitch">Press to login on Twitch</string>
    <string name="dialog_select_login_title">Select login to delete</string>
    <string name="dialog_select">Select</string>
    <string name="dialog_load_chat_edit">\"Select Chat for edit\"</string>
    <string name="toast_need_login_to">At first, login to</string>
    <string name="toast_chat_name_exist">Chat name exist</string>
    <string name="toast_chat_saved">Chat saved</string>
    <string name="toast_type_chat_name">Type chat name plz</string>
    <string name="toast_add_some_channels">Add some channels plz</string>
    <string name="dialog_answer_wrong_sc2tv_name">wrong chat name</string>
    <string name="dialog_select_site">Select site</string>
    <string name="dialog_title_check_sc2tv_name">Type channel name</string>
    <string name="dialog_title_show_sc2tv_by_api">Channels running now</string>
    <string name="dialog_title_check_twitch_channel">Check twitch channel</string>
    <string name="dialog_title_select_smile_site">Select site</string>
    <string name="loading_video">Loading video</string>
    <string name="dialog_field_add_video">Add video stream</string>
    <string name="btn_add_twitch_video">Add Twitch video</string>
    <string name="toast_add_stream_first">Add stream first</string>
    <string name="btn_find_Twitch_via_api">Find channel via Twitch API</string>
    <string name="dialog_title_what_add">What you will add</string>
    <string name="hint_type_gg_streamer">Type GG streamer</string>
    <string name="btn_check_stream">Check Stream</string>
    <string name="hint_add_video_prefer_name">Prefer Name</string>
    <string name="dialog_ad_qr_code">Add by QR code</string>
    <string name="dialog_add_chat_sites">Add chat</string>
    <string name="toast_failed_get_goodgame_id">Failed to get GoodGame channel</string>
    <string name="btn_login_goodgame">Press to login on GoodGame</string>


</resources>