<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical" >

    <Button
        android:id="@+id/okLog"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/btn_login_exit" />

    <Button
        android:id="@+id/btnCleanSc2tvLogin"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentRight="true"
        android:text="@string/login_to_sc2tv" />

    <ImageButton
        android:id="@+id/btnImageAddLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:background="@drawable/sc2tv"
        android:contentDescription="@string/create_new_chat"
        android:src="@drawable/sc2tv" />

    <EditText
        android:id="@+id/sc2tvPass"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignBottom="@+id/btnImageAddLogin"
        android:layout_toLeftOf="@+id/btnCleanSc2tvLogin"
        android:layout_toRightOf="@+id/btnImageAddLogin"
        android:ems="10"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/sc2tvName"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/sc2tvPass"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/btnCleanSc2tvLogin"
        android:ems="10"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btnCleanTwitchLogin"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/sc2tvPass"
        android:text="@string/login_to_twitch" />

    <ImageButton
        android:id="@+id/btnTwitchLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/btnImageAddLogin"
        android:background="@drawable/sc2tv"
        android:contentDescription="@string/create_new_chat"
        android:src="@drawable/twitch" />

    <EditText
        android:id="@+id/twitchPass"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignBottom="@+id/btnCleanTwitchLogin"
        android:layout_alignRight="@+id/sc2tvPass"
        android:layout_toRightOf="@+id/btnTwitchLogin"
        android:ems="10"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/twitchName"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_above="@+id/twitchPass"
        android:layout_alignRight="@+id/sc2tvPass"
        android:layout_toRightOf="@+id/btnTwitchLogin"
        android:ems="10"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btnClearLogins"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/btn_clear_all_logins" />

</RelativeLayout>