<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/black"
                android:orientation="vertical" >

    <Button
            android:id="@+id/btnAddLogin"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentRight="true"
             />

    <ImageButton
            android:id="@+id/btnImageAddLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"

            android:contentDescription="@string/create_new_chat"
            />

    <EditText
            android:id="@+id/editPass"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignBottom="@+id/btnImageAddLogin"
            android:layout_toLeftOf="@+id/btnAddLogin"
            android:layout_toRightOf="@+id/btnImageAddLogin"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/hint_login_pass"/>

    <EditText
            android:id="@+id/editNick"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/btnAddLogin"
            android:ems="10"
            android:hint="@string/hint_login_nickname"
            android:inputType="textPersonName"
            android:layout_toRightOf="@+id/btnImageAddLogin">

        <requestFocus />
    </EditText>


</RelativeLayout>